# salario

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  config.toml  config.yaml.template  help.md  justfile  prek.toml  pyproject.toml
docker/: start-panel.sh
src/salario/: app.py  config.py  data.py  util.py
