[project]
name = "salario"
version = "0.1.0"
description = "Salary Analysis kode24 2025"
requires-python = ">=3.11"
dependencies = [
    "panel>=1.4",
    "plotly>=5.18",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
